--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
         "lodash": "^4.17.19",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
-        "sass-loader": "^8.0.0"
+        "sass-loader": "^8.0.0",
+        "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
         "@coreui/coreui": "^3.2.2",
         "@fortawesome/fontawesome-free": "^5.14.0",
         "@popperjs/core": "^2.4.4",
         "bootstrap": "^4.5.2",
-        "jquery": "^3.5.1"
+        "jquery": "^3.5.1",
+        "perfect-scrollbar": "^1.5.0",
+        "popper.js": "^1.16.1"
     }
 }
