--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@fortawesome/fontawesome-free": "^5.14.0",
         "@popperjs/core": "^2.4.4",
         "bootstrap": "^4.5.2",
+        "chart.js": "^2.9.3",
         "jquery": "^3.5.1",
         "perfect-scrollbar": "^1.5.0",
         "popper.js": "^1.16.1"
